circle plus test

--- a/circle.yml
+++ b/circle.yml
@@ -1,21 +1,37 @@
-#
-# Build configuration for Circle CI
-#
+            #
 
-general:
-    artifacts:
-        - /home/ubuntu/JunitRunner/app/build/outputs/apk/
+            # Build configuration for Circle CI
+            #
 
-machine:
-    environment:
-        ANDROID_HOME: /usr/local/android-sdk-linux
+            general:
+                artifacts:
+                    - /home/ubuntu/JunitRunner/app/build/outputs/apk/
 
-dependencies:
-    override:
-        - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-19.1.0,android-19,extra-google-m2repository,extra-google-google_play_services,extra-android-support
-        - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
+            machine:
+                environment:
+                    ANDROID_HOME: /usr/local/android-sdk-linux
+            dependencies:
+                override:
+                    - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-21.1.2,android-21,extra-google-m2repository,extra-google-google_play_services,extra-android-support
+                    - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
+            test:
+              override:
+                # start the emulator
+                - emulator -avd circleci-android21 -no-audio -no-window:
+                    background: true
+                    parallel: true
+                # wait for it to have booted
+                - circle-android wait-for-boot
+                # This sleep should avoid the com.android.builder.testing.api.DeviceException: com.android.ddmlib.ShellCommandUnresponsiveException
+                - sleep 60
+                # at least remove the look screen
+                - adb shell input keyevent 82
+                # run tests  against the emulator.
+                - ./gradlew connectedAndroidTest
+                # copy the build outputs to artifacts
+                - cp -r /home/ubuntu/JunitRunner/app/build/outputs/ $CIRCLE_ARTIFACTS
+                # copy the test results to the test results directory.
+                - cp -r /home/ubuntu/JunitRunner/app/build/outputs/androidTest-results/* $CIRCLE_TEST_REPORT
 
-test:
-    override:
-        - (./gradlew assemble):
-            timeout: 360
+
+
