--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,14 @@
                 override:
                     - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-21.1.2,android-21,extra-google-m2repository,extra-google-google_play_services,extra-android-support
                     - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
+
+test:
+    override:
+        - (./gradlew assemble):
+            timeout: 360
+
+
+
             test:
               override:
                 # start the emulator
@@ -29,9 +37,9 @@
                 # run tests  against the emulator.
                 - ./gradlew connectedAndroidTest
                 # copy the build outputs to artifacts
-                - cp -r /home/ubuntu/JunitRunner/app/build/outputs/ $CIRCLE_ARTIFACTS
+                - cp -r /home/ubuntu/JunitRunner/app/build/outputs/  $CIRCLE_ARTIFACTS
                 # copy the test results to the test results directory.
-                - cp -r /home/ubuntu/JunitRunner/app/build/outputs/androidTest-results/* $CIRCLE_TEST_REPORT
+                - cp -r /home/ubuntu/JunitRunner/app/build/outputs/androidTest-results/*  $CIRCLE_TEST_REPORT
 
 
 
